external-projects/sui-prover/crates/sui-prover/tests/snapshots/scenario/scenario_abort.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: code should not abort
   ┌─ tests/inputs/scenario/scenario_abort.fail.move:13:5
   │
13 │     assert!(false);
   │     ^^^^^^^^^^^^^^
   │
   =     at tests/inputs/scenario/scenario_abort.fail.move:11: scenario
